--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/prashantkamdar/SceneDL#readme",
   "dependencies": {
     "feedparser": "2.1.0",
+    "mongodb": "2.2.22",
     "nconf": "0.8.4",
     "request": "2.79.0"
   }
