changing travis url

--- a/config.json
+++ b/config.json
@@ -1,15 +1,10 @@
 {
 	
-	"SceneSites":[
+	"Sites":[
 	{
-		"Name":"SceneSrc",
-		"URL":"http://www.scnsrc.me/",
-		"RSS":"http://feeds.feedburner.com/scnsrc/rss"
-	},
-	{
-		"Name":"ReleaseLog",
-		"URL":"http://www.rlslog.net/",
-		"RSS":"http://feeds.feedburner.com/releaselog"
+		"Name":"ItsFreeDownload",
+		"URL":"http://www.itsfreedownloads.com/",
+		"RSS":"http://www.itsfreedownloads.com/feed/"
 	}
 	]
 }
